kubernetes/apps/default/fanwatch/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fanwatch
  namespace: default
  labels:
    app: fanwatch
spec:
  selector:
    app: fanwatch
  ports:
    - name: http
      port: 80
      targetPort: http
